--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "handlebars": "^4.0.6",
     "metalsmith": "^2.3.0",
+    "metalsmith-clean-css": "^5.0.1",
     "metalsmith-collections": "^0.9.0",
     "metalsmith-layouts": "^1.8.0",
     "metalsmith-markdown": "^0.2.1",
